Back In Time

Version 1.6.0-dev (development of upcoming release)
* Fix: Snapshot compare copy symlink as symlink (#1902) (Peter Sevens @sevens)
* Fix: Crash when comparing a snapshot with a symlink pointing to a nonexistent target (Peter Sevens @sevens)
* Fix: Crash (KeyError) opening language setup dialog with unknown locale/language
* Changed: Completed license information to conform the REUSE.software and SPDX standards.
* Breaking Change: Auto-remove rules "Free inodes" and "Free space" disabled by default (#1976)

Version 1.5.3 (2024-11-13)
* Doc: User manual (build with MkDocs) (#1838) (Kosta Vukicevic @stcksmsh)
* Doc: User-callback topic in user manual (#1659)
* Feature: Support language Interlingua (Occidental)
* Feature: Warn if destination directory is formatted as NTFS (#1854) (David Gibbs @fallingrock)
* Breaking Change: Minimal Python version 3.9 required (#1731)
* Breaking Change: Auto migration of config version 4 or lower not longer supported (#1857)
* Fix: Prevent duplicates in Exclude/Include list of Manage Profiles dialog
* Fix: Fix Qt segmentation fault when canceling out of unconfigured BiT (#1095) (Derek Veit @DerekVeit)
* Fix: Correct global flock fallbacks (#1834) (Timothy Southwick @NickNackGus)
* Fix: Use SSH key password only if it is valid, otherwise request it from user (#1852) (David Wales @daviewales)
* Feature: Support fcron (#610)
* Feature: User message about release candidate (#1906)
* Refactor: General tab and its Schedule section
* Refactor: Own module for Manage Profiles dialog and separate Generals tab code (#1865)
* Refactor: Remove class OrderedSet
* Refactor: Remove os.system() from class Execute
* Refactor: Systray notifications send utilize DBUS instead of notify-send (#1156) (Felix Stupp @Zocker1999NET)
* Refactor!: Remove unused config field "user_callback.no_logging" (#1887)
* Refactor!: Remove eCryptFS check for home folder (#1855)
* Dependency: Remove libnotify-bin (notify-send) (#1156)