@@ -1,6 +1,7 @@
 Back In Time
 
 Version 1.6.0-dev (development of upcoming release)
+* Feature: Open user manual (local if available otherwise online) via Help menu
 * Fix: Snapshot compare copy symlink as symlink (#1902) (Peter Sevens @sevens)
 * Fix: Crash when comparing a snapshot with a symlink pointing to a nonexistent target (Peter Sevens @sevens)
 * Fix: Crash (KeyError) opening language setup dialog with unknown locale/language
